update(app): fix direct reports popover content overflow

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -88,14 +88,7 @@
 }
 
 .direct-report-selection .ant-popover-inner-content {
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.direct-report-selection .ant-popover-inner {
-  max-height: 350px;
+  padding: 8px 16px;
 }
 
 .direct-report-selection .ant-popover-arrow {
